err/fiveruns.dash.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/fiveruns'...
Listing './lib/python3.5/site-packages/fiveruns/dash'...
Compiling './lib/python3.5/site-packages/fiveruns/dash/configuration.py'...
***   File "./lib/python3.5/site-packages/fiveruns/dash/configuration.py", line 34
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fiveruns/dash/protocol.py'...
***   File "./lib/python3.5/site-packages/fiveruns/dash/protocol.py", line 42
    print body
             ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fiveruns/dash/scm'...
Listing './lib/python3.5/site-packages/fiveruns/dash/scm/handlers'...
Listing './lib/python3.5/site-packages/fiveruns/recipes'...
Listing './lib/python3.5/site-packages/fiveruns/tests'...
Compiling './lib/python3.5/site-packages/fiveruns/tests/configuration.py'...
***   File "./lib/python3.5/site-packages/fiveruns/tests/configuration.py", line 37
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fiveruns/tests/exceptions.py'...
***   File "./lib/python3.5/site-packages/fiveruns/tests/exceptions.py", line 33
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fiveruns.dash-0.4.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simplejson'...
Listing './lib/python3.5/site-packages/simplejson/tests'...
Listing './lib/python3.5/site-packages/simplejson-3.13.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
